--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./src/assets/Images/logo.png" type="image/x-icon">
-    <title>MicroFinance</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+    <link
+      rel="shortcut icon"
+      href="./src/assets/Images/logo.png"
+      type="image/x-icon"
+    />
+  
   </head>
   <body>
-    <div id="root" ></div>
+    <div id="root"></div>
     <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
